--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=JOSEPH\\SQLEXPRESS01;Database=YeshuwaAMS;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+  }
 }
