mod: edit course

--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=JOSEPH\\SQLEXPRESS01;Database=YeshuwaAMS;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=JOSEPH\\SQLEXPRESS01;Database=YeshuwaAMS;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;",
+    "AppConnection": "Data Source=localhost; Initial Catalog=YeshuwaAMS; Integrated Security=True; TrustServerCertificate=True;"
   }
 }
