--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=JOSEPH\\SQLEXPRESS01;Database=YeshuwaAMS;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True;",
     "AppConnection": "Data Source=localhost; Initial Catalog=YeshuwaAMS; Integrated Security=True; TrustServerCertificate=True;"
+  },
+  "Payment": {
+    "PaystackSK": "sk_test_5968e9efbb5a965b9791c7a2b1ce4511584e4b9b"
   }
 }
