--- a/src/src.csproj
+++ b/src/src.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Paystack.Net" Version="1.1.3" />
   </ItemGroup>
 
 </Project>
